--- a/index.html
+++ b/index.html
@@ -30,14 +30,26 @@
           <li><a href="#" class="hover-link">customer</a></li>
           <li><a href="#" class="hover-link">pricing</a></li>
           <li><a href="#" class="hover-link">resources</a></li>
-          <li><a href="#" class="hover-link">sign in</a></li>
-          <li><a href="#" class="hover-link">sign up</a></li>
+          <li><a class="hover-link primary-button" href="#">Sign in</a></li>
+          <li><a class="hover-link secondary-button" href="#">Sign up</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <header>
-    <h1>Hero Section</h1>
+    <div class="container flex section-gap">
+      <div class="header-left flex">
+        <h1>Design Confidently</h1>
+        <p>
+          UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating
+          them with real users.
+        </p>
+        <a href="#" class="primary-button">Get started</a>
+      </div>
+      <div class="header-right">
+        <img src="./assets/asset 2.png" alt="header image">
+      </div>
+    </div>
   </header>
 
   <section>
